# napari-raman

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
napari_raman/: _dock_widget.py  read.py  utils.py
src/napari_raman/: _dock_widget.py  baseline_removal.py
